[package]
name = "algorithm_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
brute_force = { version = "0.1.0", path = "../algorithms/brute_force" }
data_types = { version = "0.1.0", path = "../helpers/data_types" }
divide_and_conquer = { version = "0.1.0", path = "../algorithms/divide_and_conquer" }
measure_execution_time = { version = "0.1.0", path = "../helpers/measure_execution_time" }
ron = "0.9.0"
