[package]
name = "algorithm_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
brute_force = { version = "0.1.0", path = "../algorithms/brute_force" }
point_utilities = { version = "0.1.0", path = "../point_utilities" }
divide_and_conquer = { version = "0.1.0", path = "../algorithms/divide_and_conquer" }
prettytable-rs = "0.10.0"
